# OOP_ex3

./: CMakeLists.txt  Image.cpp  Image.h  ImageDataStracture.h  Pixel.cpp  Pixel.h  README.docx  Utilities.cpp  Utilities.h
include/: CMakeLists.txt  Image.h  ImageDataStracture.h  Pixel.h  Utilities.h  oop3.h
src/: CMakeLists.txt  Image.cpp  ImageDataStracture.cpp  Pixel.cpp  Utilities.cpp  main.cpp  oop3.cpp
